# grab-lounge-backend

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/reservation/: __main__.py  container.py
src/reservation/adapter/: http_client.py  orm.py  repository.py
src/reservation/domain/: commands.py  models.py
src/reservation/presentation/fastapi/: app.py  routers.py  schema.py
src/reservation/service/: __init__.py  handlers.py  messagebus.py
src/user/: __main__.py  app.py  db.py  users.py
tests/: test_handlers.py
tests/e2e/: test_api.py
