[tool.poetry]
name = "grab-lounge-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi-users = {extras = ["sqlalchemy"], version = "^8.1.1"}
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
