[tool.poetry]
name = "grab-lounge-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.7,<3.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^8.1.1"}
uvicorn = "^0.15.0"
py-bus = "^0.2.0"
sqlmodel = "^0.0.4"
PyMySQL = "0.9.3"
cryptography = "^35.0.0"
dependency-injector = "^4.37.0"
aiomysql = "^0.0.21"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
aiosqlite = "^0.17.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
